# serialcomm

./: .gitignore  CMakeLists.txt  LICENSE  format-code.sh  readme.md
docs/: mock-serial.md  serial.md
examples/: CMakeLists.txt  mockserial-reader.cpp  mockserial-writer.cpp
examples/messages/: CMakeLists.txt  main.cpp
examples/pty/: CMakeLists.txt  pty.cpp
examples/structs/: CMakeLists.txt  main.cpp
examples/structs/serial-test-struct/: serial-test-struct.ino
examples/test/: CMakeLists.txt  main.cpp
examples/test/serial-test/: serial-test.ino
gtests/: CMakeLists.txt  main-gtest.cpp
include/: serial.hpp
include/serialcomm/: messages.hpp  mock.hpp  mock_serial.hpp  serial.hpp  wire.h  wire.hpp
src/: serial.cpp  wire.cpp  wire_apple.cpp  wire_linux.cpp
src/serialcomm/: errno.hpp  helper.hpp  mock_serial.hpp  serial_port.hpp  serialcomm.hpp
